[gd_scene load_steps=27 format=3 uid="uid://bfovx5c7rnow2"]

[ext_resource type="Texture2D" uid="uid://ceigioa4vnjg4" path="res://Entities/Enemies/Fire worm/Assets/Idle.png" id="1_og1ew"]
[ext_resource type="Script" path="res://Entities/Enemies/Fire worm/fire_worm.gd" id="1_uph5x"]
[ext_resource type="PackedScene" uid="uid://b4j2jxe1flidv" path="res://Common/Components Manager/Health/health_component.tscn" id="2_8ed1e"]
[ext_resource type="Texture2D" uid="uid://c03e152pm08q3" path="res://Entities/Enemies/Fire worm/Assets/Walk.png" id="2_pgoja"]
[ext_resource type="PackedScene" uid="uid://cq88y4mmkn2fq" path="res://Common/Components Manager/Movement/movement_component.tscn" id="3_5fngm"]
[ext_resource type="Texture2D" uid="uid://dsh1npmpo0miq" path="res://Entities/Enemies/Fire worm/Assets/Attack.png" id="3_l3uha"]
[ext_resource type="Texture2D" uid="uid://bvfkiv6crud7j" path="res://Entities/Enemies/Fire worm/Assets/Get Hit.png" id="4_k3sj8"]
[ext_resource type="PackedScene" uid="uid://fk8t8w3u1uxw" path="res://Common/Components Manager/Hurtbox/hurtbox_component.tscn" id="4_ologv"]
[ext_resource type="Texture2D" uid="uid://6y8swamir2vc" path="res://Entities/Enemies/Fire worm/Assets/Death.png" id="5_g1y1f"]
[ext_resource type="PackedScene" uid="uid://dc2j6t3nvqnml" path="res://Common/Components Manager/Player Dectection/player_detection_component.tscn" id="5_jbuon"]
[ext_resource type="Script" path="res://Common/States/FiniteStateMachine.gd" id="8_mmlrf"]
[ext_resource type="Script" path="res://Entities/Enemies/Fire worm/State/Idle.gd" id="12_w6517"]
[ext_resource type="Script" path="res://Entities/Enemies/Fire worm/State/Attack.gd" id="13_53bqv"]
[ext_resource type="PackedScene" uid="uid://lr3i1ls1gw2f" path="res://Common/proyectiles/Fire ball/fire_ball.tscn" id="14_6jhkk"]
[ext_resource type="Script" path="res://Entities/Enemies/Fire worm/State/Stagger.gd" id="15_i3gts"]
[ext_resource type="Script" path="res://Common/States/Enemy/Meele/Dead.gd" id="17_acql0"]

[sub_resource type="Animation" id="Animation_68guh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_og1ew")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_te2sg"]
resource_name = "death"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_g1y1f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Components/HurtboxComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qvxjj"]
resource_name = "follow"
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_pgoja")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_qbtv8"]
resource_name = "idle"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_og1ew")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_l8q8i"]
resource_name = "ranged_attack"
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_l3uha")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.625, 0.6875, 0.75, 0.8125, 0.875, 0.9375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FiniteStateMachine/Attack")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.75),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_40kwr"]
resource_name = "stagger"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_k3sj8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rpsbw"]
_data = {
"RESET": SubResource("Animation_68guh"),
"death": SubResource("Animation_te2sg"),
"follow": SubResource("Animation_qvxjj"),
"idle": SubResource("Animation_qbtv8"),
"ranged_attack": SubResource("Animation_l8q8i"),
"stagger": SubResource("Animation_40kwr")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ykamv"]
radius = 11.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1npav"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yjylm"]
radius = 252.002

[node name="FireWorm" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_uph5x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rpsbw")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_og1ew")
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(7, -2)
shape = SubResource("CapsuleShape2D_ykamv")

[node name="Components" type="Node2D" parent="."]

[node name="HealthComponent" parent="Components" instance=ExtResource("2_8ed1e")]
health_max = 20

[node name="MovementComponent" parent="Components" instance=ExtResource("3_5fngm")]

[node name="HurtboxComponent" parent="Components" instance=ExtResource("4_ologv")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HurtboxComponent"]
position = Vector2(8, -2)
shape = SubResource("CapsuleShape2D_1npav")

[node name="PlayerDetection" parent="Components" instance=ExtResource("5_jbuon")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/PlayerDetection"]
shape = SubResource("CircleShape2D_yjylm")

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("8_mmlrf")

[node name="Idle" type="Node" parent="FiniteStateMachine"]
script = ExtResource("12_w6517")

[node name="Attack" type="Node" parent="FiniteStateMachine"]
script = ExtResource("13_53bqv")
bullet_node = ExtResource("14_6jhkk")

[node name="Stagger" type="Node" parent="FiniteStateMachine"]
script = ExtResource("15_i3gts")

[node name="Death" type="Node" parent="FiniteStateMachine"]
script = ExtResource("17_acql0")

[connection signal="hit_detected" from="Components/HurtboxComponent" to="." method="_on_hit_detected"]
[connection signal="player_detected" from="Components/PlayerDetection" to="." method="_on_player_detected"]
[connection signal="player_lost" from="Components/PlayerDetection" to="." method="_on_player_lost"]
